Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11749

"Add leading asterisks" does not indent text correctly

XMLWordPrintable

    • a2db85b11ee2767b903941f2691310184fc21a1e (qt-creator/qt-creator/master)

      1. Go to "Tools" -> "Options..." -> "Text Editor" -> "Completion" and check "Add leading asterisks".
      2. Open a C++ file.
      3. Start a Qt-style comment:
        /*! Once upon a midnight dreary
        
      4. Press Enter and go on typing in the next line:
        /*! Once upon a midnight dreary
         * while I pondered weak and weary
        

        You can easily see that the text is not indented correctly. The same is true for Java-style comments starting with "/**". Only C++ comment ("/*") work correctly.

      When text is automatically indented, like it is here, it should be indented correctly.

        For Gerrit Dashboard: QTCREATORBUG-11749
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes