C++: Fix indentation of doxygen comment continuations

Align also after the leading asterisk.

Fixes: QTCREATORBUG-11749
Change-Id: Ic054598c80206bf38b74345aed20d88486f57cad
Reviewed-by: David Schulz <david.schulz@qt.io>